# Decorator-Pattern-Practise

./: CMakeLists.txt  README.md
Domain/: CMakeLists.txt  Course.cpp  Course.h  ICourse.h  Student.cpp  Student.h
Domain/CourseDecorators/: CMakeLists.txt  CorrelativeDecorator.cpp  CorrelativeDecorator.h  ICourseDecorator.cpp  ICourseDecorator.h  LimitedDecorator.cpp  LimitedDecorator.h  WithCounterDecorator.cpp  WithCounterDecorator.h
Tests/: CMakeLists.txt  TestDecorators.cpp
